force-app/main/default/objects/Test_User_Mapping__c/Test_User_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Maps Salesforce User IDs to demo persona owner IDs for Sales360 PoC. Allows the demo to switch between test personas while running as a single SF user.</description>
    <label>Test User Mapping</label>
</CustomObject>