force-app/main/default/objects/Test_User_Mapping__c/fields/Demo_Persona_Label__c.field-meta.xml
<CustomField>
    <fullName>Demo_Persona_Label__c</fullName>
    <description>Friendly label shown in the Demo Persona Selector LWC (e.g., India Sales Lead, UAE Senior AE).</description>
    <label>Demo Persona Label</label>
    <length>60</length>
    <type>Text</type>
</CustomField>