force-app/main/default/objects/Test_User_Mapping__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional - describes the persona (e.g., India Sales Lead, UAE Senior AE).</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>