force-app/main/default/objects/Test_User_Mapping__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the fallback record when no exact user match is found.</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>