force-app/main/default/objects/Test_User_Mapping__c/fields/Mapped_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Owner_Id__c</fullName>
    <description>The test data owner ID (e.g., USER_001) that this SF user should be mapped to.</description>
    <label>Mapped Owner Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>